@@ -30,13 +30,28 @@ has public_key => (
     required=> 1,
 );
 
+has url_options => (
+    is      => 'ro',
+    default => sub { [
+	'.algolia.net',
+	'-1.algolianet.com',
+	'-2.algolianet.com',
+	'-3.algolianet.com',
+    ] },
+);
+
+has url_index => (
+    is      => 'rw',
+    default => 0,
+);
+
 has base_url => (
     is      => 'ro',
     lazy    => 1,
     default => sub {
         my $self = shift;
-        return 'https://' . $self->application_id . '.algolia.net/1';
-    }
+        return $self->url_options->[$self->url_index];
+    },
 );
 
 has headers => (
@@ -77,21 +92,33 @@ sub clear_index {
 }
 
 sub make_request {
-    my ($self, $method, $url_parts, $data) = @_;
+    my ($self, $method, $url_parts, $data, $retry_count) = @_;
+    $retry_count //= 0;
     my %encoded_data = ();
     if ($data) {
         my $json = JSON->new;
 	%encoded_data = ( content => encode_utf8($json->encode($data)));
     }
-    my $request = $method->(join('/', $self->base_url, @{$url_parts}), %{$self->headers}, %encoded_data);
+    my $request = $method->(join('/', 'https://'.$self->application_id.$self->base_url, 1, @{$url_parts}), %{$self->headers}, %encoded_data);
     #say $request->as_string;
     my $ua = LWP::UserAgent->new(timeout => 10);
     my $response = $ua->request($request);
     if (! $response->is_success) {
-        Wing->log->error("ALGOLIA FAILURE");
-        Wing->log->error("Request: ". $request->as_string);
-        Wing->log->error("Response: ". $response->as_string);
-        die "Error updating search index\n";
+	my $url_option_count = scalar(@{$self->url_options});
+	if ($retry_count >= $url_option_count) {
+		Wing->log->error("ALGOLIA FAILURE");
+		Wing->log->debug("Request: ". $request->as_string);
+		Wing->log->debug("Response: ". $response->as_string);
+		die "Error updating search index\n";
+        }
+        else {
+		Wing->log->info('Retrying algolia write with new host.');
+		$self->url_index($self->url_index+1);
+		if ($self->url_index >= $url_option_count) {
+			$self->url_index(0);
+		}
+ 		return $self->make_request($method, $url_parts, $data, $retry_count + 1);
+        }
     }
     return 1 unless $response->content;
     return $response->content;
